Catalagos, autocomplete bitacora

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -8,7 +8,8 @@
 					<input type="hidden" id="id" name="id">
 					<div class="form-group col-sm-12 col-md-3">
 					    <label for="nombre">Ingeniero que Atiende</label>
-					    <select class="form-control input-sm" name="nombre" id="nombre"></select>
+					    <!-- <select class="form-control input-sm" name="nombre" id="nombre"></select> -->
+					    <input type="text" class="form-control input-sm" name="nombre" id="nombre">
 					</div>
 
 					<div class="form-group col-sm-12 col-md-3">
@@ -18,11 +19,12 @@
 
 					<div class="form-group col-sm-12 col-md-3">
 					    <label for="entidad">Entidad</label>
-					    <select class="form-control input-sm" name="entidad" id="entidad">
+					    <input type="text" class="form-control input-sm" name="entidad" id="entidad" >
+					    <!-- <select class="form-control input-sm" name="entidad" id="entidad">
 					    	<option value="">Seleccionar</option>
 					    	<option value="CNS III PUEBLA">CNS III PUEBLA</option>
 					    	<option value="CORPORATIVO TRAFICO">CORPORATIVO TRAFICO</option>
-					    </select>
+					    </select> -->
 					</div>
 
 					<div class="form-group col-sm-12 col-md-3">
