--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -109,7 +109,7 @@
 						<th>Fin de Soporte</th>
 						<th>Solución</th>
 						<th>Fecha Escalación</th>
-						<th>Archivo</th>
+						<th>Escalado/Archivo</th>
 					</tr>
 				</thead>
 				<tbody>
