Validación fecha finalizar

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -54,13 +54,18 @@
 					    <label for="fecha_soporte">Inicio de Soporte</label>
 					    <input type="text" class="form-control input-sm" name="fecha_soporte" id="fecha_soporte">
 					</div>
+
+					<div class="form-group col-sm-12 col-md-3">
+					    <label for="fecha_fin_falla">Fecha Fin Falla</label>
+					    <input type="text" class="form-control input-sm" name="fecha_fin_falla" id="fecha_fin_falla">
+					</div>
 					
 					<div class="form-group col-sm-12 col-md-3">
 					    <label for="lugar">Lugar</label>
 					    <input type="text" class="form-control input-sm" name="lugar" id="lugar">
 					</div>
 
-					<div class="form-group col-sm-12 col-md-3">
+					<div class="form-group col-sm-12 col-md-2">
 					    <label for="equipo">Equipo</label>
 					    <input type="text" class="form-control input-sm" name="equipo" id="equipo">
 					</div>
@@ -78,9 +83,14 @@
 					    </select>
 					</div>
 
-					<div class="form-group col-sm-12 col-md-7">
+					<div class="form-group col-sm-12 col-md-5">
 					    <label for="comentarios">Descripción</label>
 					    <textarea class="form-control input-sm" name="comentarios" id="comentarios" cols="10" rows="1"></textarea>
+					</div>
+
+					<div class="form-group col-sm-12 col-md-6">
+					    <label for="solucion">Solución</label>
+					    <input type="text" class="form-control input-sm" name="solucion" id="solucion">
 					</div>
 
 					<div class="form-group text-center col-sm-12 col-md-12">
@@ -184,8 +194,8 @@
 
 							<input type="hidden" id="id_rep_fin" name="id_rep_fin">
 							<div class="form-group col-sm-12 col-md-6">
-							    <label for="fecha_fin_falla">Fin Falla</label>
-							    <input type="text" class="form-control input-sm" name="fecha_fin_falla" id="fecha_fin_falla">
+							    <label for="fecha_fin_falla_upd">Fin Falla</label>
+							    <input type="text" class="form-control input-sm" name="fecha_fin_falla_upd" id="fecha_fin_falla_upd">
 							</div>
 
 							<div class="form-group col-sm-12 col-md-12">
