Validacion fecha fin en funcion de inicio de soporte

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -60,7 +60,7 @@
 					    <input type="text" class="form-control input-sm" name="fecha_fin_falla" id="fecha_fin_falla">
 					</div>
 					
-					<div class="form-group col-sm-12 col-md-3">
+					<div class="form-group col-sm-12 col-md-2">
 					    <label for="lugar">Lugar</label>
 					    <input type="text" class="form-control input-sm" name="lugar" id="lugar">
 					</div>
@@ -83,14 +83,14 @@
 					    </select>
 					</div>
 
-					<div class="form-group col-sm-12 col-md-5">
+					<div class="form-group col-sm-12 col-md-2">
 					    <label for="comentarios">Descripción</label>
 					    <textarea class="form-control input-sm" name="comentarios" id="comentarios" cols="10" rows="1"></textarea>
 					</div>
 
-					<div class="form-group col-sm-12 col-md-6">
+					<div class="form-group col-sm-12 col-md-4">
 					    <label for="solucion">Solución</label>
-					    <input type="text" class="form-control input-sm" name="solucion" id="solucion">
+					    <textarea class="form-control input-sm" name="solucion" id="solucion" cols="10" rows="1"></textarea>
 					</div>
 
 					<div class="form-group text-center col-sm-12 col-md-12">
@@ -193,6 +193,7 @@
 						<form class="form" id="form-finalizar" style="padding: 0px 20px">
 
 							<input type="hidden" id="id_rep_fin" name="id_rep_fin">
+							<input type="hidden" name="fecha_soporte_upd" id="fecha_soporte_upd">
 							<div class="form-group col-sm-12 col-md-6">
 							    <label for="fecha_fin_falla_upd">Fin Falla</label>
 							    <input type="text" class="form-control input-sm" name="fecha_fin_falla_upd" id="fecha_fin_falla_upd">
