--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -84,7 +84,7 @@
 					</div>
 
 					<div class="form-group col-sm-12 col-md-2">
-					    <label for="comentarios">Descripción</label>
+					    <label for="comentarios">Falla</label>
 					    <textarea class="form-control input-sm" name="comentarios" id="comentarios" cols="10" rows="1"></textarea>
 					</div>
 
@@ -113,6 +113,8 @@
 						<th>Asunto</th>
 						<th>Estatus</th>
 						<th>Impacto</th>
+						<th>Equipo</th>
+						<th>Falla</th>
 						<th>Inicio de Falla</th>
 						<th>Aviso a Soporte</th>
 						<th>Inicio de Soporte</th>
@@ -245,7 +247,11 @@
 							<div class="form-group col-sm-12 col-md-6">
 							    <label for="proveedor_escalado">Empresa</label>
 							    <select  class="form-control input-sm" name="proveedor_escalado" id="proveedor_escalado"></select>
-							    <!-- <input type="text"> -->
+							</div>
+
+							<div class="form-group col-sm-12 col-md-6">
+							    <label for="fecha_escalado">Fecha Escalación</label>
+							    <input type="text" class="form-control input-sm" name="fecha_escalado" id="fecha_escalado">
 							</div>
 
 							<div class="form-group col-sm-12 col-md-12">
