--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -95,7 +95,7 @@
 
 					<div class="form-group text-center col-sm-12 col-md-12">
 					    <button type="button" class="btn btn-primary" id="btn-guardar-reporte">Guardar</button>
-					    <button type="reset" class="btn btn-success" id="">Limpiar</button>
+					    <button type="button" class="btn btn-success" id="btn-limpiar">Limpiar</button>
 					</div>
 
 				</form>
