--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -1,3 +1,11 @@
+<style>
+	#table-inventario tbody th, #table-inventario tbody td {
+	    padding: 8px 10px; /* e.g. change 8x to 4px here */
+	}
+	.dataTables tbody tr {
+		min-height: 35px !important; /* or whatever height you need to make them all consistent */
+	}
+</style>
 <div class="container-fluid">
 	
 	<div class="row">
