--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -162,7 +162,7 @@
 							</div>
 
 							<div class="form-group col-sm-12 col-md-12">
-							    <label for="solucion_escalado">Solución de Escalación</label>
+							    <label for="solucion_escalado">Solución de Proveedor</label>
 							    <textarea class="form-control" name="solucion_escalado" id="solucion_escalado" cols="10" rows="4"></textarea>
 							</div>
 
