Validacion campo solucion_fin

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -109,8 +109,8 @@
 							</div>
 
 							<div class="form-group col-sm-12 col-md-12">
-							    <label for="solucion">Solución</label>
-							    <textarea class="form-control" name="solucion" id="solucion" cols="10" rows="4"></textarea>
+							    <label for="solucion_fin">Solución</label>
+							    <textarea class="form-control" name="solucion_fin" id="solucion_fin" cols="10" rows="4"></textarea>
 							</div>
 
 						</form>
