Adecuaciones dashboard para liquidados

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -28,7 +28,7 @@
 
 
 	<div class="col-sm-12">
-		<p class='h4'>Total eventos Liquidados: <strong id='total'></strong></p>
+		<p class='h4'>Total eventos: <strong id='total'></strong></p>
 	</div>
 	
 	<div class="col-sm-6" id="contenido">
