--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -196,6 +196,7 @@
 					<form class="form" id="form-reportes" style="padding: 0px 20px">
 						<input type="hidden" id="id" name="id">
 						<div class="form-group col-sm-12 col-md-3">
+							<input type="hidden" name="id_ingeniero" id="id_ingeniero">
 						    <label for="nombre">Ingeniero que Atiende</label>
 						    <input type="text" class="form-control input-sm auc" name="nombre" id="nombre">
 						</div>
@@ -215,11 +216,11 @@
 						    <select class="form-control input-sm" name="evento" id="evento">
 						    	<option value="">Seleccionar</option>
 						    	<option value="Falla">Falla</option>
-						    	<option value="Asesoría">Asesoría</option>
-						    	<option value="Consultoría">Consultoría</option>
+						    	<!-- <option value="Asesoría">Asesoría</option>
+						    	<option value="Consultoría">Consultoría</option> -->
 						    	<option value="Programado">Programado</option>
 						    	<option value="Refacción">Refacción</option>
-						    	<option value="Otro">Otro</option>
+						    	<!-- <option value="Otro">Otro</option> -->
 						    </select>
 						</div>
 
