Se agrega LEC y se ajustan datos del dashboard, se quita detalle

--- a/views/informe.phtml
+++ b/views/informe.phtml
@@ -1,3 +1,4 @@
+
 <div class="container-fluid">
 
 	<div class="col-sm-12">
@@ -31,16 +32,27 @@
 		<p class='h4'>Total eventos: <strong id='total'></strong></p>
 	</div>
 	
-	<div class="col-sm-6" id="contenido">
+	<div class="col-sm-12" id="contenido" style="font-size: 12px;">
 		
+		<div class="col-sm-12">
+			<div class="col-sm-3 itm" id='Liquidado'></div>
+			<div class="col-sm-3 itm" id='Proceso'></div>
+			<div class="col-sm-6 itm" id='Promedio'></div>
+		</div>
+		
+		<div class="col-sm-12">
+			<div class="col-sm-3 itm" id='Cancelado'></div>
+			<div class="col-sm-3 itm" id='Gerencias'></div>
+		</div>
+
 	</div>
 
-	<div class="col-sm-6" id="promedio">
+	<!-- <div class="col-sm-6" id="promedio">
 	
 	</div>
 
 	<div class="col-sm-6" id="detalle">
 	
-	</div>
+	</div> -->
 
 </div>
