Catalogos y campos al registrar, tiempo promedio en minutos

--- a/views/reporte.phtml
+++ b/views/reporte.phtml
@@ -216,11 +216,11 @@
 						    <select class="form-control input-sm" name="evento" id="evento">
 						    	<option value="">Seleccionar</option>
 						    	<option value="Falla">Falla</option>
-						    	<!-- <option value="Asesoría">Asesoría</option>
-						    	<option value="Consultoría">Consultoría</option> -->
-						    	<option value="Programado">Programado</option>
+						    	<option value="Asesoría/Consulta">Asesoría/Consulta</option>
+						    	<!-- <option value="Consultoría">Consultoría</option> -->
+						    	<option value="ControlCambios/Programado">Control de Cambios/Programado</option>
+						    	<option value="Siniestro">Siniestro</option>
 						    	<option value="Refacción">Refacción</option>
-						    	<!-- <option value="Otro">Otro</option> -->
 						    </select>
 						</div>
 
